label for select language

--- a/documentation/components/AppComponent.html
+++ b/documentation/components/AppComponent.html
@@ -193,7 +193,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="69" class="link-to-prism">src/app/app.component.ts:69</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="81" class="link-to-prism">src/app/app.component.ts:81</a></div>
                             </td>
                         </tr>
 
@@ -283,8 +283,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="87"
-                            class="link-to-prism">src/app/app.component.ts:87</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="99"
+                            class="link-to-prism">src/app/app.component.ts:99</a></div>
                 </td>
             </tr>
 
@@ -489,7 +489,7 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="69" class="link-to-prism">src/app/app.component.ts:69</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="81" class="link-to-prism">src/app/app.component.ts:81</a></div>
                             </td>
                         </tr>
 
@@ -557,6 +557,18 @@
       activateClass: &#x27;activated-tab jsColorActive&#x27;,
       icon: &#x27;faJsLanding&#x27;,
       title: &#x27;js.title&#x27;
+    },
+    {
+      language: [
+        {
+          text: &#x27;language.spanish&#x27;,
+          code: &#x27;es&#x27;
+        },
+        {
+          text: &#x27;language.english&#x27;,
+          code: &#x27;en&#x27;
+        }
+      ]
     }
   ]</code>
                         </td>
@@ -685,6 +697,18 @@ export class AppComponent {
       activateClass: &#x27;activated-tab jsColorActive&#x27;,
       icon: &#x27;faJsLanding&#x27;,
       title: &#x27;js.title&#x27;
+    },
+    {
+      language: [
+        {
+          text: &#x27;language.spanish&#x27;,
+          code: &#x27;es&#x27;
+        },
+        {
+          text: &#x27;language.english&#x27;,
+          code: &#x27;en&#x27;
+        }
+      ]
     }
   ];
   /** Booleano que indica si está mostrandose la url que se ha solicitado */
