--- a/src/app/shared/components/nav-bar/nav-bar.component.html
+++ b/src/app/shared/components/nav-bar/nav-bar.component.html
@@ -5,7 +5,8 @@
                 <fa-icon *ngIf="item.icon" [icon]="icons[item.icon]"></fa-icon>
                 <span *ngIf="item.text">{{item.text | translate}}</span>
             </a>
-            <select *ngIf="item.language " (change)="changeLanguage($event.target.value)">
+            <label for="langSelect" *ngIf="item.language" style="display: none;">{{'language.language' | translate}}</label>
+            <select id="langSelect" *ngIf="item.language" (change)="changeLanguage($event.target.value)">
                 <option *ngFor="let lang of item.language" value="{{lang.code}}">{{lang.text | translate}}</option>
             </select>
         </li>
